force-app/main/default/objects/GenericBatchAction__mdt/GenericBatchAction__mdt.object-meta.xml
<CustomObject>
    <label>Generic Batch Action</label>
    <pluralLabel>Generic Batch Actions</pluralLabel>
</CustomObject>