force-app/main/default/objects/GenericBatchAction__mdt/fields/Chunk_Size__c.field-meta.xml
<CustomField>
    <fullName>Chunk_Size__c</fullName>
    <description>Number of records in each batch</description>
    <label>Chunk Size</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>