force-app/main/default/objects/GenericBatchAction__mdt/fields/Params__c.field-meta.xml
<CustomField>
    <fullName>Params__c</fullName>
    <label>Params</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>